[ATMOSPHERE-544] Add Octavia Amphere v2 support
Related: ATMOSPHERE-544

Change-Id: I4d50fe0bb805f08f2ec1df2061cb0467721e7de0

--- a/charts/octavia/templates/configmap-etc.yaml
+++ b/charts/octavia/templates/configmap-etc.yaml
@@ -84,6 +84,22 @@ limitations under the License.
 {{- $_ := tuple "oslo_db" "internal" "octavia" "mysql" . | include "helm-toolkit.endpoints.authenticated_endpoint_uri_lookup"| set .Values.conf.octavia.database "connection" -}}
 {{- end -}}
 
+{{- if empty .Values.conf.octavia.task_flow.persistence_connection -}}
+{{- $_ := tuple "oslo_db_persistence" "internal" "octavia" "mysql" . | include "helm-toolkit.endpoints.authenticated_endpoint_uri_lookup"| set .Values.conf.octavia.task_flow "persistence_connection" -}}
+{{- end -}}
+
+{{- if empty .Values.conf.octavia.task_flow.jobboard_backend_hosts -}}
+{{- $_ := tuple "valkey" "internal" . | include "helm-toolkit.endpoints.endpoint_host_lookup" | set .Values.conf.octavia.task_flow "jobboard_backend_hosts" -}}
+{{- end -}}
+
+{{- if empty .Values.conf.octavia.task_flow.jobboard_backend_port -}}
+{{- $_ := tuple "valkey" "sentinel" "server" . | include "helm-toolkit.endpoints.endpoint_port_lookup" | set .Values.conf.octavia.task_flow "jobboard_backend_port" -}}
+{{- end -}}
+
+{{- if and (empty .Values.conf.octavia.task_flow.jobboard_backend_password) (not (empty .Values.endpoints.valkey.password) ) -}}
+{{- $_ := set .Values.conf.octavia.task_flow "jobboard_backend_password" .Values.endpoints.valkey.password -}}
+{{- end -}}
+
 {{- if empty .Values.conf.octavia.DEFAULT.transport_url -}}
 {{- $_ := tuple "oslo_messaging" "internal" "octavia" "amqp" . | include "helm-toolkit.endpoints.authenticated_transport_endpoint_uri_lookup" | set .Values.conf.octavia.DEFAULT "transport_url" -}}
 {{- end -}}
