--- a/roles/octavia/defaults/main.yml
+++ b/roles/octavia/defaults/main.yml
@@ -34,6 +34,10 @@ octavia_tls_client_common_name: octavia-client
 octavia_tls_client_private_key_algorithm: ECDSA
 octavia_tls_client_private_key_size: 256
 
+# TLS settings: Jobboard
+octavia_jobboard_default_secret_name: valkey-server-certs
+octavia_jobboard_sentinel_secret_name: valkey-server-certs
+
 # Heartbeat key
 octavia_heartbeat_key: "{{ undef(hint='You must specify a Octavia heartbeat key') }}"
 
