[ATMOSPHERE-544] Add Octavia Amphere v2 support
Related: ATMOSPHERE-544

Change-Id: I4d50fe0bb805f08f2ec1df2061cb0467721e7de0

--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -12,7 +12,9 @@ RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF b
 pip3 install \
     --constraint /upper-constraints.txt \
         /src/octavia \
-        /src/ovn-octavia-provider
+        /src/ovn-octavia-provider \
+        valkey[hiredis] \
+        redis[hiredis]
 EOF
 
 FROM openstack-python-runtime
