--- a/roles/openstack_helm_endpoints/vars/main.yml
+++ b/roles/openstack_helm_endpoints/vars/main.yml
@@ -364,7 +364,14 @@ _openstack_helm_endpoints_load_balancer:
     port:
       api:
         public: 443
+  valkey:
+    hosts:
+      default: valkey
   oslo_db:
+    auth:
+      octavia:
+        password: "{{ openstack_helm_endpoints_octavia_mariadb_password }}"
+  oslo_db_persistence:
     auth:
       octavia:
         password: "{{ openstack_helm_endpoints_octavia_mariadb_password }}"
@@ -372,6 +379,16 @@ _openstack_helm_endpoints_load_balancer:
     auth:
       octavia:
         password: "{{ openstack_helm_endpoints_octavia_rabbitmq_password }}"
+
+_openstack_helm_endpoints_oslo_db_persistence:
+  oslo_db_persistence:
+    auth:
+      admin:
+        password: "{{ openstack_helm_endpoints_mariadb_admin_password }}"
+      octavia:
+        password: "{{ openstack_helm_endpoints_octavia_mariadb_password }}"
+    hosts:
+      default: percona-xtradb-haproxy
 
 _openstack_helm_endpoints_cloudformation:
   cloudformation:
