--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -11,10 +11,16 @@ RUN git -C /src/octavia fetch --unshallow
 ARG OVN_OCTAVIA_PROVIDER_GIT_REF=5f0b2d89e8c2b3ddf8849c4d7e48325d9304afdc
 ADD --keep-git-dir=true https://opendev.org/openstack/ovn-octavia-provider.git#${OVN_OCTAVIA_PROVIDER_GIT_REF} /src/ovn-octavia-provider
 RUN git -C /src/ovn-octavia-provider fetch --unshallow
+RUN <<EOF bash -xe
+sed -i '/taskflow===.*/d' /upper-constraints.txt
+sed -i '/redis===.*/d' /upper-constraints.txt
+sed -i '/pyOpenSSL===.*/d' /upper-constraints.txt
+EOF
+
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
     --constraint /upper-constraints.txt \
-        /src/octavia \
+        /src/octavia[redis] \
         /src/ovn-octavia-provider
 EOF
 
