Add ovn-bgp-agent DaemonSet inside OVN helm chart
Depends-On: https://review.vexxhost.dev/c/atmosphere/+/940

Change-Id: I4f01b3b5af79f1bd8e51297113013068962b9faf
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>
(cherry picked from commit 3980b80ea6ff16710e5e7ecfe2d9c622f091aa29)

--- a/charts/ovn/templates/configmap-bin.yaml
+++ b/charts/ovn/templates/configmap-bin.yaml
@@ -28,4 +28,8 @@ data:
 {{ tuple "bin/_ovn-controller-init.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
   ovn-network-logging-parser.sh: |
 {{ tuple "bin/_ovn-network-logging-parser.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+  ovn-bgp-agent-init.sh: |
+{{ tuple "bin/_ovn-bgp-agent-init.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+  ovn-bgp-agent.sh: |
+{{ tuple "bin/_ovn-bgp-agent.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
 {{- end }}
