--- a/images/ovn-bgp-agent/Dockerfile
+++ b/images/ovn-bgp-agent/Dockerfile
@@ -7,11 +7,20 @@ FROM openstack-venv-builder AS build
 ARG OVN_BGP_AGENT_GIT_REF=704742076a28c13b811ea37e71dae1e4b0aca573
 ADD --keep-git-dir=true https://opendev.org/openstack/ovn-bgp-agent.git#${OVN_BGP_AGENT_GIT_REF} /src/ovn-bgp-agent
 RUN git -C /src/ovn-bgp-agent fetch --unshallow
+COPY patches/ovn-bgp-agent /patches/ovn-bgp-agent
+RUN git -C /src/ovn-bgp-agent apply --verbose /patches/ovn-bgp-agent/*
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
     --constraint /upper-constraints.txt \
-        /src/ovn-bgp-agent
+        /src/ovn-bgp-agent[frr_k8s]
 EOF
 
 FROM openstack-python-runtime
+RUN <<EOF bash -xe
+apt-get update -qq
+apt-get install -qq -y --no-install-recommends \
+    iproute2 openvswitch-switch
+apt-get clean
+rm -rf /var/lib/apt/lists/*
+EOF
 COPY --from=build --link /var/lib/openstack /var/lib/openstack
