--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -27,6 +27,8 @@
 
 - name: Deploy Monitoring
   ansible.builtin.import_playbook: vexxhost.atmosphere.monitoring
+  tags:
+    - monitoring
 
 - name: Deploy OpenStack
   import_playbook: vexxhost.atmosphere.openstack
