--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -34,6 +34,8 @@
             dependencies: *image_build_jobs
         - atmosphere-molecule-aio-ovn:
             dependencies: *image_build_jobs
+        - atmosphere-molecule-aio-ovn-bgp-agent:
+            dependencies: *image_build_jobs
         - atmosphere-molecule-csi-local-path-provisioner:
             dependencies: *image_build_jobs
         - atmosphere-molecule-csi-rbd:
@@ -54,6 +56,8 @@
         - atmosphere-molecule-aio-openvswitch:
             dependencies: *image_build_jobs
         - atmosphere-molecule-aio-ovn:
+            dependencies: *image_build_jobs
+        - atmosphere-molecule-aio-ovn-bgp-agent:
             dependencies: *image_build_jobs
         - atmosphere-molecule-csi-local-path-provisioner:
             dependencies: *image_build_jobs
