Add ovn-bgp-agent DaemonSet inside OVN helm chart
Depends-On: https://review.vexxhost.dev/c/atmosphere/+/940

Change-Id: I4f01b3b5af79f1bd8e51297113013068962b9faf
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -36,6 +36,8 @@
             dependencies: *image_build_jobs
         - atmosphere-molecule-aio-ovn:
             dependencies: *image_build_jobs
+        - atmosphere-molecule-aio-ovn-bgp-agent:
+            dependencies: *image_build_jobs
         - atmosphere-molecule-csi-local-path-provisioner:
             dependencies: *image_build_jobs
         - atmosphere-molecule-csi-rbd:
@@ -56,6 +58,8 @@
         - atmosphere-molecule-aio-openvswitch:
             dependencies: *image_build_jobs
         - atmosphere-molecule-aio-ovn:
+            dependencies: *image_build_jobs
+        - atmosphere-molecule-aio-ovn-bgp-agent:
             dependencies: *image_build_jobs
         - atmosphere-molecule-csi-local-path-provisioner:
             dependencies: *image_build_jobs
