Add valkey support
Change-Id: I82d0dfa20fdf2815e3fdcfe3c3e8a45dbb30963a

--- a/.charts.yml
+++ b/.charts.yml
@@ -195,6 +195,10 @@ charts:
     version: 4.3.6
     repository:
       url: https://charts.bitnami.com/bitnami
+  - name: valkey
+    version: 2.0.0
+    repository:
+      url: https://charts.bitnami.com/bitnami
   - name: rook-ceph
     version: 1.14.5
     repository:
