--- a/molecule/shared/molecule.yml
+++ b/molecule/shared/molecule.yml
@@ -146,6 +146,8 @@ provisioner:
             cinder:
               DEFAULT:
                 osapi_volume_workers: 2
+        # Valkey
+        openstack_helm_endpoints_valkey_password: secrete123
       cephs:
         ceph_osd_devices:
           - "/dev/ceph-{{ inventory_hostname_short }}-osd0/data"
