--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -217,6 +217,7 @@ _atmosphere_images:
   rabbitmq_credential_updater: "{{ atmosphere_image_prefix }}docker.io/rabbitmqoperator/default-user-credential-updater:1.0.4"
   rabbitmq_server: "{{ atmosphere_image_prefix }}docker.io/library/rabbitmq:3.13.3-management"
   rabbitmq_topology_operator: "{{ atmosphere_image_prefix }}docker.io/rabbitmqoperator/messaging-topology-operator:1.14.1"
+  valkey: "{{ atmosphere_image_prefix }}docker.io/bitnami/valkey:8.0.2-debian-12-r0"
   rook_ceph: "{{ atmosphere_image_prefix }}docker.io/rook/ceph:v1.14.5"
   secretgen_controller: "{{ atmosphere_image_prefix }}ghcr.io/carvel-dev/secretgen-controller@sha256:59ec05ce5847bfd70c8e04f08b5195e918c8f6fbb947ffc91b456494a2958fd5"
   staffeln_db_sync: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/staffeln:{{ atmosphere_release }}"
