--- a/roles/openstack_helm_endpoints/defaults/main.yml
+++ b/roles/openstack_helm_endpoints/defaults/main.yml
@@ -497,3 +497,9 @@ openstack_helm_endpoints_manila_mariadb_password: "{{ undef(hint='You must speci
 openstack_helm_endpoints_staffeln_mariadb_password: "{{ undef(hint='You must specify a Staffeln MariaDB password') }}"
 
                                                                    # ]]]
+# .. envvar:: openstack_helm_endpoints_valkey_password [[[
+#
+# Password for valkey service
+openstack_helm_endpoints_valkey_password: "{{ undef(hint='You must specify a Valkey password') }}"
+
+                                                                   # ]]]
