Add valkey support
Change-Id: I82d0dfa20fdf2815e3fdcfe3c3e8a45dbb30963a

--- a/playbooks/infrastructure.yml
+++ b/playbooks/infrastructure.yml
@@ -40,6 +40,10 @@
       tags:
         - percona-xtradb-cluster
 
+    - role: valkey
+      tags:
+        - valkey
+
     - role: keycloak
       tags:
         - keycloak
