--- a/.charts.yml
+++ b/.charts.yml
@@ -211,6 +211,10 @@ charts:
     version: 0.2.8
     repository: *openstack_helm_repository
     dependencies: *openstack_helm_dependencies
+  - name: valkey
+    version: 2.4.6
+    repository:
+      url: https://charts.bitnami.com/bitnami
   - name: vector
     version: 0.33.0
     repository:
