--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -21,6 +21,10 @@ csi_driver: "{{ lookup('env', 'MOLECULE_CSI_DRIVER') | default('local-path-provi
 
 cluster_issuer_type: self-signed
 
+valkey_helm_values:
+  replica:
+    replicaCount: 1
+
 ingress_nginx_helm_values:
   controller:
     config:
