--- a/images/horizon/Dockerfile
+++ b/images/horizon/Dockerfile
@@ -3,23 +3,37 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-ARG HORIZON_GIT_REF=23d0b9525f7c11288d503123e29db0bd66f9ca88
-ADD --keep-git-dir=true https://opendev.org/openstack/horizon.git#${HORIZON_GIT_REF} /src/horizon
+ARG HORIZON_GIT_REPO
+ARG HORIZON_GIT_REF
+ADD --keep-git-dir=true ${HORIZON_GIT_REPO}#${HORIZON_GIT_REF} /src/horizon
 RUN git -C /src/horizon fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/designate-dashboard.git#stable/2024.2 /src/designate-dashboard
+ARG DESIGNATE_DASHBOARD_GIT_REPO
+ARG DESIGNATE_DASHBOARD_GIT_REF
+ADD --keep-git-dir=true ${DESIGNATE_DASHBOARD_GIT_REPO}#${DESIGNATE_DASHBOARD_GIT_REF} /src/designate-dashboard
 RUN git -C /src/designate-dashboard fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/heat-dashboard.git#stable/2024.2 /src/heat-dashboard
+ARG HEAT_DASHBOARD_GIT_REPO
+ARG HEAT_DASHBOARD_GIT_REF
+ADD --keep-git-dir=true ${HEAT_DASHBOARD_GIT_REPO}#${HEAT_DASHBOARD_GIT_REF} /src/heat-dashboard
 RUN git -C /src/heat-dashboard fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/ironic-ui.git#stable/2024.2 /src/ironic-ui
+ARG IRONIC_UI_GIT_REPO
+ARG IRONIC_UI_GIT_REF
+ADD --keep-git-dir=true ${IRONIC_UI_GIT_REPO}#${IRONIC_UI_GIT_REF} /src/ironic-ui
 RUN git -C /src/ironic-ui fetch --unshallow
-ARG MAGNUM_UI_REF=c9fdb537eaded73e81ea296d893e45d753337dc7
-ADD --keep-git-dir=true https://opendev.org/openstack/magnum-ui.git#${MAGNUM_UI_REF} /src/magnum-ui
+ARG MAGNUM_UI_GIT_REPO
+ARG MAGNUM_UI_GIT_REF
+ADD --keep-git-dir=true ${MAGNUM_UI_GIT_REPO}#${MAGNUM_UI_GIT_REF} /src/magnum-ui
 RUN git -C /src/magnum-ui fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/manila-ui.git#stable/2024.2 /src/manila-ui
+ARG MANILA_UI_GIT_REPO
+ARG MANILA_UI_GIT_REF
+ADD --keep-git-dir=true ${MANILA_UI_GIT_REPO}#${MANILA_UI_GIT_REF} /src/manila-ui
 RUN git -C /src/manila-ui fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/neutron-vpnaas-dashboard.git#stable/2024.2 /src/neutron-vpnaas-dashboard
+ARG NEUTRON_VPNAAS_DASHBOARD_GIT_REPO
+ARG NEUTRON_VPNAAS_DASHBOARD_GIT_REF
+ADD --keep-git-dir=true ${NEUTRON_VPNAAS_DASHBOARD_GIT_REPO}#${NEUTRON_VPNAAS_DASHBOARD_GIT_REF} /src/neutron-vpnaas-dashboard
 RUN git -C /src/neutron-vpnaas-dashboard fetch --unshallow
-ADD --keep-git-dir=true https://opendev.org/openstack/octavia-dashboard.git#stable/2024.2 /src/octavia-dashboard
+ARG OCTAVIA_DASHBOARD_GIT_REPO
+ARG OCTAVIA_DASHBOARD_GIT_REF
+ADD --keep-git-dir=true ${OCTAVIA_DASHBOARD_GIT_REPO}#${OCTAVIA_DASHBOARD_GIT_REF} /src/octavia-dashboard
 RUN git -C /src/octavia-dashboard fetch --unshallow
 COPY patches/horizon /patches/horizon
 RUN git -C /src/horizon apply --verbose /patches/horizon/*
