--- a/images/ovn/Dockerfile
+++ b/images/ovn/Dockerfile
@@ -3,8 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-10-31T12:56:04Z
 
 FROM golang AS ovn-kubernetes
-ARG OVN_KUBERNETES_REF=5359e7d7f872058b6e5bf884c9f19d1922451f29
-ADD https://github.com/ovn-org/ovn-kubernetes.git#${OVN_KUBERNETES_REF} /src
+ARG OVN_KUBERNETES_REPO
+ARG OVN_KUBERNETES_REF
+ADD ${OVN_KUBERNETES_REPO}#${OVN_KUBERNETES_REF} /src
 COPY patches/ovn-kubernetes /patches/ovn-kubernetes
 RUN git -C /src apply --verbose /patches/ovn-kubernetes/*
 RUN <<EOF bash -xe
