--- a/images/staffeln/Dockerfile
+++ b/images/staffeln/Dockerfile
@@ -3,8 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-ARG STAFFELN_GIT_REF=v2.2.3
-ADD --keep-git-dir=true https://github.com/vexxhost/staffeln.git#${STAFFELN_GIT_REF} /src/staffeln
+ARG STAFFELN_GIT_REPO
+ARG STAFFELN_GIT_REF
+ADD --keep-git-dir=true ${STAFFELN_GIT_REPO}#${STAFFELN_GIT_REF} /src/staffeln
 RUN git -C /src/staffeln fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
