--- a/images/manila/Dockerfile
+++ b/images/manila/Dockerfile
@@ -3,8 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-ARG MANILA_GIT_REF=09f3ab0a229362c00bb55f704cfeae43bccd3c8d
-ADD --keep-git-dir=true https://opendev.org/openstack/manila.git#${MANILA_GIT_REF} /src/manila
+ARG MANILA_GIT_REPO
+ARG MANILA_GIT_REF
+ADD --keep-git-dir=true ${MANILA_GIT_REPO}#${MANILA_GIT_REF} /src/manila
 RUN git -C /src/manila fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
