--- a/images/netoffload/Dockerfile
+++ b/images/netoffload/Dockerfile
@@ -3,8 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM golang AS build
-ARG NETOFFLOAD_GIT_REF=94b8c0fdb0b83bd1b7e14b9a58077a047c78a800
-ADD https://github.com/vexxhost/netoffload.git#${NETOFFLOAD_GIT_REF} /src
+ARG NETOFFLOAD_GIT_REPO
+ARG NETOFFLOAD_GIT_REF
+ADD ${NETOFFLOAD_GIT_REPO}#${NETOFFLOAD_GIT_REF} /src
 WORKDIR /src
 RUN go build -v -o offloadctl ./cmd/offloadctl/main.go
 
