--- a/images/neutron/Dockerfile
+++ b/images/neutron/Dockerfile
@@ -3,22 +3,27 @@
 # Atmosphere-Rebuild-Time: 2025-01-24T11:51:19Z
 
 FROM openstack-venv-builder AS build
-ARG NEUTRON_GIT_REF=804d6006e3f09c214d6de8a3f23de70c44f1d51d
-ADD --keep-git-dir=true https://opendev.org/openstack/neutron.git#${NEUTRON_GIT_REF} /src/neutron
+ARG NEUTRON_GIT_REPO
+ARG NEUTRON_GIT_REF
+ADD --keep-git-dir=true ${NEUTRON_GIT_REPO}#${NEUTRON_GIT_REF} /src/neutron
 RUN git -C /src/neutron fetch --unshallow
 COPY patches/neutron /patches/neutron
 RUN git -C /src/neutron apply --verbose /patches/neutron/*
-ARG NEUTRON_VPNAAS_GIT_REF=990e478b1e6db459b6cb9aec53ce808e2957bb65
-ADD --keep-git-dir=true https://opendev.org/openstack/neutron-vpnaas.git#${NEUTRON_VPNAAS_GIT_REF} /src/neutron-vpnaas
+ARG NEUTRON_VPNAAS_GIT_REPO
+ARG NEUTRON_VPNAAS_GIT_REF
+ADD --keep-git-dir=true ${NEUTRON_VPNAAS_GIT_REPO}#${NEUTRON_VPNAAS_GIT_REF} /src/neutron-vpnaas
 RUN git -C /src/neutron-vpnaas fetch --unshallow
-ARG NETWORKING_BAREMETAL_GIT_REF=1fba63ce21619d3fe70117c6679e53629c612bc1
-ADD --keep-git-dir=true https://opendev.org/openstack/networking-baremetal.git#${NETWORKING_BAREMETAL_GIT_REF} /src/networking-baremetal
+ARG NETWORKING_BAREMETAL_GIT_REPO
+ARG NETWORKING_BAREMETAL_GIT_REF
+ADD --keep-git-dir=true ${NETWORKING_BAREMETAL_GIT_REPO}#${NETWORKING_BAREMETAL_GIT_REF} /src/networking-baremetal
 RUN git -C /src/networking-baremetal fetch --unshallow
-ARG POLICY_SERVER_GIT_REF=d87012b56741cb2ad44fa4dec9c5f24001ad60fe
-ADD --keep-git-dir=true https://github.com/vexxhost/neutron-policy-server.git#${POLICY_SERVER_GIT_REF} /src/neutron-policy-server
+ARG POLICY_SERVER_GIT_REPO
+ARG POLICY_SERVER_GIT_REF
+ADD --keep-git-dir=true ${POLICY_SERVER_GIT_REPO}#${POLICY_SERVER_GIT_REF} /src/neutron-policy-server
 RUN git -C /src/neutron-policy-server fetch --unshallow
-ARG LOG_PASER_GIT_REF=9bc923c1294864ec709c538ba5c309065ef710d5
-ADD --keep-git-dir=true https://github.com/vexxhost/neutron-ovn-network-logging-parser.git#${LOG_PASER_GIT_REF} /src/neutron-ovn-network-logging-parser
+ARG LOG_PARSER_GIT_REPO
+ARG LOG_PARSER_GIT_REF
+ADD --keep-git-dir=true ${LOG_PARSER_GIT_REPO}#${LOG_PARSER_GIT_REF} /src/neutron-ovn-network-logging-parser
 RUN git -C /src/neutron-ovn-network-logging-parser fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
