Add PROJECT_GIT_REPO to all images
Change-Id: Iaceacb307caaa1a46e1de9e784ac7482c49d493e

--- a/images/magnum/Dockerfile
+++ b/images/magnum/Dockerfile
@@ -11,8 +11,9 @@ RUN tar -xzf /helm.tar.gz
 RUN mv /${TARGETOS}-${TARGETARCH}/helm /usr/bin/helm
 
 FROM openstack-venv-builder AS build
-ARG MAGNUM_GIT_REF=db197e08a09da93062fc4222180051dadfc0f0d8
-ADD --keep-git-dir=true https://opendev.org/openstack/magnum.git#${MAGNUM_GIT_REF} /src/magnum
+ARG MAGNUM_GIT_REPO
+ARG MAGNUM_GIT_REF
+ADD --keep-git-dir=true ${MAGNUM_GIT_REPO}#${MAGNUM_GIT_REF} /src/magnum
 RUN git -C /src/magnum fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
