Add support for exchanging tokens in Keycloak
Change-Id: Ie5d5bee36ece52aefd035013e8f946b1160e8c58
(cherry picked from commit c0ba66642718e492979b43bad2b2fc1ba9d7a217)

--- a/roles/keycloak/vars/main.yml
+++ b/roles/keycloak/vars/main.yml
@@ -26,6 +26,8 @@ _keycloak_helm_values:
   #                        we have to define jdbc connection string explicitly along side
   #                        `externalDatabase` helm values.
   extraEnvVars:
+    - name: KC_FEATURES
+      value: "token-exchange,admin-fine-grained-authz"
     - name: KC_PROXY
       value: edge
     - name: KC_DB
