--- a/roles/ironic/vars/main.yml
+++ b/roles/ironic/vars/main.yml
@@ -49,8 +49,8 @@ _ironic_helm_values:
         default_network_interface: flat
       conductor:
         clean_step_priority_override: deploy.erase_devices_express:5
-        deploy_kernel: "{{ ironic_python_agent_deploy_kernel.openstack_image.id }}"
-        deploy_ramdisk: "{{ ironic_python_agent_deploy_ramdisk.openstack_image.id }}"
+        deploy_kernel: "{{ ironic_python_agent_deploy_kernel.images.0.id }}"
+        deploy_ramdisk: "{{ ironic_python_agent_deploy_ramdisk.images.0.id }}"
       deploy:
         erase_devices_priority: 0
         erase_devices_metadata_priority: 0
