Allow using default certificate with ingress
Change-Id: Ie7eeff6e733c9d7da152ce4ac35a1808d7e83967
(cherry picked from commit 49b0933cf09e6c72f0d7c1da226024fb5bae96af)

--- a/roles/ingress/defaults/main.yml
+++ b/roles/ingress/defaults/main.yml
@@ -38,3 +38,6 @@ ingress_annotations: {}
 
 # List of annotations to apply to all Ingress resources as default
 ingress_default_annotations: "{{ ingress_global_annotations | default(atmosphere_ingress_annotations) }}"
+
+# Use default TLS certificate
+ingress_use_default_tls_certificate: false
